--- a/templates/components/navbar.html.twig
+++ b/templates/components/navbar.html.twig
@@ -8,13 +8,29 @@
 			<div class="collapse navbar-collapse" id="navbarNav">
 				<ul class="navbar-nav">
 					<li class="nav-item">
-						<a class="nav-link active" aria-current="page" href="#">Home</a>
+						<a class="nav-link active" aria-current="page" href="/">Home</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link" href="#">Features</a>
+						<a class="nav-link" href="/create">Add Event</a>
 					</li>
-					<li class="nav-item">
-						<a class="nav-link" href="#">Pricing</a>
+					<li class="nav-item dropdown">
+						<a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+							Category
+						</a>
+						<ul class="dropdown-menu even" aria-labelledby="navbarDropdownMenuLink">
+							<li>
+								<a class="dropdown-item text-center text-white" href="/category/MUSIC">MUSIC</a>
+							</li>
+							<li>
+								<a class="dropdown-item text-center text-white" href="/category/SPORT">SPORT</a>
+							</li>
+							<li>
+								<a class="dropdown-item text-center text-white" href="/category/MOVIE">MOVIE</a>
+							</li>
+							<li>
+								<a class="dropdown-item text-center text-white" href="/category/THEATER">THEATER</a>
+							</li>
+						</ul>
 					</li>
 				</ul>
 			</div>
