--- a/templates/event_page/create.html.twig
+++ b/templates/event_page/create.html.twig
@@ -5,6 +5,18 @@
 
 {% block main %}
 
-Create
+<div class="p-5">
+<p class="h3 text-center">
+Add Event
+</p>
+</div>
+<div class="container even w-50 m-auto p-5">
 
+{{form_start(form)}}
+
+{{form_widget(form)}}
+
+{{form_end(form)}}
+
+</div>
 {% endblock %}
