--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,7 +1,7 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Merienda+One&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Acme&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Abril+Fatface&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Condensed&display=swap');
 
 
 header {
@@ -23,7 +23,7 @@ nav{
 body{
     background-color: black;
     color:white;
-    font-family: 'Abril Fatface', cursive;
+    font-family: 'Roboto Condensed', sans-serif;
 }
 
 footer {
@@ -46,3 +46,17 @@ footer p {
 .titel {
     font-family: 'Merienda One', cursive;
   }
+
+img {
+    width: 100%;
+    height: 100%;
+    object-fit:cover;
+}
+
+.pic {
+    height: 40vh;
+}
+
+.details {
+height: 80vh;
+}
