--- a/templates/event_page/details.html.twig
+++ b/templates/event_page/details.html.twig
@@ -4,7 +4,58 @@
 {% endblock %}
 
 {% block main %}
+	<div class="bg-black p-5">
+		<div class="card m-auto">
+			<div class="row g-0 details">
+				<div class="col-md-6">
+					<img src="{{ event.image }}" class="img-fluid rounded-start details" alt="{{ event.name }}">
+				</div>
+				<div class="col-md-6 even">
+					<div class="card-header">
+						<h5 class="card-title text-center">{{event.name}}</h5>
+					</div>
+					<div class="card-body">
+						<p class="h5 text-end">
+							<b>Category:
+							</b>
+							{{event.type}}</p>
+						<p class="card-text">
+							<b>On</b>
+							{{event.date|date('F j, Y, g:i a')}}</p>
+						<p class="card-text">
+							<b>Adress:</b>
+							{{event.address}}</p>
+						<p class="card-text">
+							<b>Capacity:</b>
+							{{event.capacity}}</p>
+						<p class="card-text">
+							{{event.description}}</p>
+						<div class="row g-5 p-2">
+							<div class="col-md-6">
+								<p>
+									<b>Website:
+									</b></br>
+									{{event.url}}</p>
+								<p></p>
+							</div>
+							<div class="col-md-6">
+								<p>
+									<b>Contact:</b>
+							</br>
+							{{event.email}}</br>
+						{{event.phone}}</p>
+					</div>
 
-Details
-
-{% endblock %}
+				</div>
+			</div>
+			<div class="card-footer">
+				<a class="btn btn-info btn-small" href="/edit/{{event.id}}">
+					&#128393
+				</a>
+				<a class="btn btn-info btn-small" href="/delete/{{event.id}}">
+					&#128465
+				</a>
+			</div>
+		</div>
+	</div>
+</div></div>{% endblock %}
