--- a/templates/event_page/category.html.twig
+++ b/templates/event_page/category.html.twig
@@ -10,7 +10,7 @@
 
 		<div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 p-5 g-2">
 
-			{% for x in event %}
+			{% for x in category %}
 			<div class='col p-4'>
 				<div class="card even shadow-lg bg-body rounded">
 					<img src="{{x.image}}" class="card-img-top pic" alt="{{x.name}}">
