--- a/templates/event_page/index.html.twig
+++ b/templates/event_page/index.html.twig
@@ -12,7 +12,7 @@
 
 			{% for x in eventPage %}
 			<div class='col p-4'>
-				<div class="card even shadow-lg bg-body rounded">
+				<div class="card even shadow-lg shadow-info bg-body rounded">
 					<img src="{{x.image}}" class="card-img-top pic" alt="{{x.name}}">
                     <div class="card-header">
                         <h5 class="card-title text-center">{{x.name}}</h5>
