--- a/public/css/style.css
+++ b/public/css/style.css
@@ -31,12 +31,12 @@ footer {
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
-    height:15vh;
+    height:20vh;
 }
 
 footer p {
-    text-shadow: 7px 1px 9px #0074a1;
-    -webkit-text-stroke: 0.3px #62007a;
+    text-shadow: 7px 2px 9px #000000;
+    -webkit-text-stroke: 0.3px #c801fa;
 }
 
 .even {
@@ -57,6 +57,14 @@ img {
     height: 40vh;
 }
 
-.details {
-height: 80vh;
+.details-pic{
+    width: 40vw;
+    position:relative;
+    float: left;
+}
+
+.details-text {
+    width: 40vw;
+    position:relative;
+    float: right;
 }
